# trade-bot

./: Cargo.toml  Config.toml  LICENSE  README.md
backtest_data/: AAPL.csv  LMT.csv  quick_convert.sh
src/: alpaca_api.rs  config.rs  main.rs  market_strategies.rs
src/crypto_processing/: crypto_monitor.rs  crypto_ticker_loop.rs  mod.rs
src/stock_processing/: mod.rs  stock_monitor.rs  stock_ticker_loop.rs
