[package]
name = "trade-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1.0", default-features = false, features = ["rt-multi-thread", "macros"]}
apca = "0.25.0"
tracing = "0.1.32"
tracing-subscriber = "0.3.9"
anyhow = "1.0.56"
futures = "0.3.21"
ureq = { version = "2.4.0", features = ["rustls","webpki-roots","serde_json","json"] }
serde = {version = "1.0.136", features = ["derive"]}
csv = "1.1.6"
toml = "0.5.8"
chrono = "0.4.19"
crossbeam-channel = { version = "0.5.4" }
ta = { version = "0.5.0", features = ["serde"] }
bincode = "1.3.3"
sled = "0.34.7"
num-decimal = {version = "0.2.4", default-features = false, features = ["num-v04", "serde"]}
threadpool = "1.8.1"

[profile.release]
opt-level = 'z'  # Optimize for size.
codegen-units = 1
panic = "abort"